<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sign Doc</string>
    <string name="btn_init">Initialize application</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_check_new">Check new documents</string>
    <string name="btn_docs_list">Documents list</string>
    <string name="btn_options">Options...</string>
    <string name="reg_client_id">Enter site domain</string>
    <string name="reg_code">Enter code from site</string>
    <string name="btn_ready">Ready</string>
    <string name="btnSign">Sign</string>
    <string name="btnDelay">Delay</string>
    <string name="btnCancel">Cancel</string>
    <string name="tabDelayed">Delayed</string>
    <string name="tabCanceled">Canceled</string>
    <string name="tabSigned">Signed</string>
    <string name="reg_title">Register sign on site</string>
    <string name="init_already">Already initialized! Press "Back".</string>
    <string name="init_start">Initialization in process...</string>
    <string name="err_keys_pair_create">Main keys create error</string>
    <string name="init_keys_pair_created">Initialize successfull</string>
    <string name="msg_enter_new_password">Enter new password</string>
    <string name="btnBegin">Begin</string>
    <string name="err_bad_password">New password is bad format</string>
    <string name="msg_enter_pass">Enter password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_error">Error!</string>
    <string name="err_site_required">Site filed is required</string>
    <string name="err_code_required">Code should by present</string>
    <string name="err_wrong_password">Wrong password</string>
    <string name="err_http_send">Can not sent document</string>
    <string name="msg_status_start_deliver">Document delivering...</string>
    <string name="msg_status_http_error">Error when deliver document</string>
    <string name="msg_status_delivered">Document delivered</string>
    <string name="msg_status_received">Check new documents present...</string>
    <string name="msg_status_no_new">New documents absent</string>
    <string name="btn_ok">OK</string>
    <string name="title_warning">Attension!</string>
    <string name="err_cannot_decrypt">Decrypt data error</string>
    <string name="title_sign_doc">Signing document</string>
    <string name="btn_do_sign">Sign</string>
    <string name="btn_sign_cancel">Put aside</string>
    <string name="in_document">in document</string>
    <string name="btn_back">Return</string>
    <string name="txt_doc_site">Site:</string>
    <string name="txt_doc_id">Document number:</string>
    <string name="err_internet_connection_absent">No internet connection</string>
    <string name="title_get_new_docs">Receive</string>
    <string name="title_send">Sending</string>
    <string name="title_init">Initialization</string>
    <string name="msg_cansel_sure">Are you sure in cancel?</string>
    <string name="btn_cancel_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="title_need_confirm">Confirmation required</string>
    <string name="msg_no_data_description">- no description -</string>
    <string name="msg_reg_sign_delivered">Register sign request delivered</string>
    <string name="titleDocsList">Documents list</string>
    <string name="btnView">View</string>
    <string name="txtDocStatusNew">NEW</string>
    <string name="txtDocStatusSigned">SIGNED</string>
    <string name="txtDocStatusNotSigned">NOT SIGNED</string>
    <string name="title_view_doc">View document</string>
    <string name="err_document_bad_format">No data in document</string>
    <string name="txtDocStatusConfirmed">DONE</string>
    <string name="btn_refresh">Refresh</string>
    <string name="txtViewDocStatus">Document status:</string>
    <string name="txtViewDocCreateTime">Receive time:</string>
    <string name="txtViewDocStatusTime">Set status time:</string>
    <string name="txtViewDocConfirmTime">Confirm time:</string>
    <string name="err_document_already_signed">Already signed</string>
    <string name="btn_qr_read">Read code</string>
    <string name="btn_show_info">Information</string>
    <string name="txt_public_key_id">Key identificator</string>
    <string name="txt_cancel_pvt_key">Private key for cancel main key</string>
    <string name="err_code_to_big">Code for confirm is too big or bad format</string>
    <string name="txt_progress_decryption">Please wait. Decryption in process...</string>

</resources>
