<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_refresh"
            android:id="@+id/btnDocsListRefresh"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_qr_read"
            android:id="@+id/btnQRRead"
            android:layout_weight="1" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listDocsView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:clickable="false"
        android:nestedScrollingEnabled="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnSign"
                android:id="@+id/btnDocSign"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnView"
                android:id="@+id/btnDocView"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registration"
            android:id="@+id/btnRegistration" />
    </LinearLayout>

</LinearLayout>