<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:height="100dp"
        android:text="@string/btn_init" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnInit"
        android:height="100dp"
        android:text="@string/btn_registration" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_docs_list"
        android:id="@+id/btnDocsList"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnRegister" />

</RelativeLayout>