<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/green"
        android:gravity="center_vertical|center_horizontal"
        android:padding="6dp"
        android:text="@string/btn_init"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_weight="0.03" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="fill_parent"
        android:layout_height="97dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:maxLines="3"
        android:layout_weight="0.03" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/msg_enter_new_password"
        android:gravity="center_vertical|center_horizontal"
        android:padding="8dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBegin"
        android:id="@+id/btnBegin"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03" />

</LinearLayout>
